applications/openeuler-eulerland-game/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: eulerland-game
  name: eulerland-game
