applications/openeuler-eulerland-game/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eulerland-game
  namespace: eulerland-game
  labels: 
    app: eulerland-game
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: eulerland-game
  template:
    metadata:
      labels:
        app: eulerland-game
    spec:
      containers:
      - name: eulerland-game-pod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/euler-land-game:v1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
