applications/openeuler-eulerland-game/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eulerland-game-service
  namespace: eulerland-game
  labels:
    app: eulerland-game
spec:
  ports:
    - name: game-port
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: eulerland-game
  type: ClusterIP
